[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Area2DShifts.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 0, 336 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 496, 0 )

[node name="Area2DShifts" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="Area2DLeft" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLeft"]
position = Vector2( -496, 0 )
shape = SubResource( 49 )

[node name="Area2DRight" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRight"]
position = Vector2( 496, 0 )
shape = SubResource( 49 )

[node name="Area2DUp" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DUp"]
position = Vector2( 0, -336 )
shape = SubResource( 50 )

[node name="Area2DDown" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDown"]
position = Vector2( 0, 336 )
shape = SubResource( 50 )

[connection signal="body_entered" from="Area2DLeft" to="." method="_on_Area2DLeft_body_entered"]
[connection signal="body_entered" from="Area2DRight" to="." method="_on_Area2DRight_body_entered"]
[connection signal="body_entered" from="Area2DUp" to="." method="_on_Area2DUp_body_entered"]
[connection signal="body_entered" from="Area2DDown" to="." method="_on_Area2DDown_body_entered"]
